--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,17 @@
-theme: jekyll-theme-minimal
+remote_theme: MicrosoftLearning/Jekyll-Theme
+exclude:
+  - readme.md
+  - .github/
+header_pages:
+  - index.html
+author: Microsoft Learning
+twitter_username: mslearning
+github_username:  MicrosoftLearning
+plugins:
+  - jekyll-sitemap
+  - jekyll-mentions
+  - jemoji
+markdown: kramdown
+kramdown:
+   syntax_highlighter_opts:
+      disable : true
